--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.11.1",
+    "@stripe/stripe-js": "^1.54.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
+    "next-sanity": "^4.3.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-toastify": "^9.1.3",
+    "sanity": "^3.11.1",
+    "stripe": "^12.9.0",
+    "styled-components": "^5.3.10"
+  },
+  "devDependencies": {
+    "typescript": "5.0.4"
   }
 }
