--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx",
-    "components/HeroBanner.jsx",
+    "components/HeroBanner/HeroBanner.jsx",
     "components/Layout.jsx"
   ],
   "exclude": ["node_modules"]
